fix 'back' button on 'edit user' page being misaligned

--- a/app/assets/stylesheets/form.css
+++ b/app/assets/stylesheets/form.css
@@ -17,6 +17,7 @@
 
 form > p {
   display: flex;
+  align-items: center;
 }
 
 form > p > * {
